--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -3,14 +3,7 @@
   color: black;
   justify-content: center;
   background-color: transparent;
-  margin: 0px;
-  padding: 1.2%;
-  margin-bottom: -1%;
   font-weight: 800;
-}
-
-#root {
-  font-family: Inter;
 }
 
 .HeaderLogoText {
@@ -66,7 +59,6 @@
   z-index: 1000;
 }
 
-
 .menu-icon span:nth-child(1) {
   top: 0;
   width: 40%;
@@ -121,102 +113,33 @@
   z-index: 800;
 }
 
-@keyframes scroll-watcher {
-  to {scale: 1 1;}
-}
-
 .menu-items {
   text-align: center;
   color: white;
-  font-size: 3.2rem;
+  font-size: 2.9rem;
+  letter-spacing: -2px;
   font-weight: 700;
+  display: block;
 }
 
-.menu-items > div {
-  margin-top: 60px;
-  margin-bottom: 0px;
+.menu-items > .menu-item {
+  margin: 70px;
+  transform: translateY(100%);
   cursor: pointer;
-  letter-spacing: -3px;
+  letter-spacing: -1px;
   position: relative;
+  width: 100%;
 }
 
-.menu-items > div:hover {
+.menu-items > .menu-item {
+  transition: text-decoration 3s;
+}
+.menu-items:hover > .menu-item {
   color: rgb(168, 168, 177);
 }
 
-.menu-items > div::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  transform: translateY(-50%);
-  left: 46px;
-  width: 0;
-  height: 6px;
-  border-radius: 2px; 
-  background-color: white;
-  transition: width 0.2s ease; 
-}
-
-.menu-items > div:hover::after {
-  width: 50%;
-}
-
-@media (prefers-color-scheme: dark) {
-
-  .arrow-button{
-
-    color: white;
-    
-  }
-
-  .HeaderLogoText:hover::after {
-    color: white;
-    }
-
-  .menu-icon span {
-    
-    background: #fff;
-    
-  }
-
-  .menu-button.open .menu-icon span:nth-child(1) {
-   
-    background: #000;
-    
-  }
-  
-  .menu-button.open .menu-icon span:nth-child(2) {
-    
-    background: #000;
-  }
-  
-  .menu-button.open .menu-icon span:nth-child(3) {
-
-    background: #000;
-    
-  }
-
-  .menu-overlay {
-  
-    background-color: white;
-    
-  }
-
-  .menu-items {
-  
-    color: black;
-   
-  }
-
-  .menu-items > div::after {
-    background-color: black;
-    
-  }
-
-  .main-header {
-    color: white;
-  }
-
+.menu-items:hover > .menu-item:hover {
+  color: rgb(255, 255, 255);
 }
 
   @media (max-width: 767.98px) {
@@ -229,9 +152,8 @@
     }
 
     .main-header {
-    
-      padding: 3.8%;
-      
+      padding: 0;
+      margin-top: -12px;
     }
 
     .menu-icon {
@@ -246,31 +168,12 @@
         font-size: 1.8rem;
       }
 
+      .menu-items > .menu-item {
+        margin-left: 10px;
+      }
+
       .menu-items > div {
         letter-spacing: -2.4px;
-      }
-
-      .menu-items > div::after {
-        left: 14px;
-        height: 5px; 
-      }
-
-  
-
-      .menu-items > div::after {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 48px;
-        width: 0;
-        height: 4px;
-        border-radius: 2px; 
-        background-color: white;
-        transition: width 0.5s ease; 
-      }
-      
-      .menu-items > div:hover::after {
-        width: 40%;
       }
       
 }
