--- a/app/components/SecondContainer.css
+++ b/app/components/SecondContainer.css
@@ -1,6 +1,6 @@
 .second-container {
     display: flex;
-    height: 80vh;
+    height: auto;
     justify-content: center;
     flex-direction: column;
     margin: 20px;
@@ -9,9 +9,11 @@
 }
 
 .black-container-for-second{
-    height: auto;
+    height: 50vh;
     background-color: black;
     display: flex;
+    margin-top: 40px;
+    margin-left: 80px;
     justify-content: center;
     border-radius: 34px;
     flex-direction: column;
@@ -20,7 +22,7 @@
 
 .second-paragraph {
     color: white;
-    font-size: 3.4rem;
+    font-size: 2.4rem;
     text-align: center;
     width: 82%;
     letter-spacing: -2.4px;
@@ -31,12 +33,13 @@
 @media only screen and (min-width: 0px) and (max-width: 1024px) {
 
     .second-container {
-        margin: 0px;
+        margin: 20px;
+        height: 100svh;
     }
 
     .black-container-for-second{
         background-color: black;
-        margin: 0px;
+        margin: 0;
         border-radius: 12px;
     }
     
@@ -48,38 +51,4 @@
         line-height: 32px;
         letter-spacing: -1.8px;
     }
-
-    .third-paragraph {
-      color: black;
-      font-size: 2.6rem;
-      text-align: center;
-      width: 100%;
-      letter-spacing: -2.8px;
-      line-height: 0px;
-    }  
-
-  .white-container-for-second{
-      height: 60vh;
-      margin-top: 10px;
-  }
-
-  .tech-stack {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    margin: 40px;
-    margin-top: 10px;
-  }
-
-  .stack {
-    display: flex;
-    margin: 20px;
-    width: 100%;
-    height: auto;
-    flex-direction: column;
-  }
-
-  .react-img {
-    margin: 20px;
-  }
 }
