--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -123,8 +123,9 @@
 }
 
 .menu-items > .menu-item {
-  margin: 60px;
-  transform: translateY(100%);
+  margin: 10px;
+  margin-top: 100px;
+  transform: translateY(40%);
   cursor: pointer;
   letter-spacing: -3px;
   position: relative;
