--- a/app/components/Portfolio.css
+++ b/app/components/Portfolio.css
@@ -1,8 +1,8 @@
 .Portfolio {
-    height: 50vh;
+    height: auto;
     display: flex;
     justify-content: center;
-    align-items: center;
+    
     flex-direction: column;
     letter-spacing: -1px;
 }
@@ -10,4 +10,89 @@
 .PortfolioHeading{
     font-size: 4.8rem;
     letter-spacing: -2px;
+    align-self: center;
+    padding-left: 80px;
+}
+
+.projectimg {
+    height: 46vh;
+    margin-bottom: 120px;
+    width: 88vmin;
+    border-radius: 12px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, .6);
+}
+
+.projectname {
+    font-size: 2rem;
+}
+
+.projects {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    padding-left: 300px;
+}
+
+.projecttext {
+    margin-top: 10px;
+    letter-spacing: 0px;
+}
+
+.techused {
+    padding-top: 40px;
+    font-size: 1.2rem;
+    color:darkblue;
+}
+
+.projectdetails {
+    width: 56vmin;
+    font-size: 1.2rem;
+}
+
+
+@media (max-width: 767.98px) {
+
+    .projects {
+        display: flex;
+        flex-direction: column;
+        gap: 0px;
+        padding-left: 0px;
+    }
+
+    .projectdetails {
+        width: 86vmin;
+        font-size: 1rem;
+    }
+
+    .projectname {
+        font-size: 1.4rem;
+    }
+
+    .projecttext {
+        margin: 20px;
+        letter-spacing: 0px;
+    }
+
+    .techused {
+        padding-top: 0px;
+        font-size: 1.2rem;
+        color:darkblue;
+    }
+
+    
+    .PortfolioHeading{
+        font-size: 2.8rem;
+        letter-spacing: -2px;
+        align-self: center;
+        padding-left: 0px;
+    }
+
+    .projectimg {
+        height: 24vh;
+        margin: 10px;
+        width: 92vmin;
+        border-radius: 8px;
+        box-shadow: 0px 2px 8px rgba(0, 0, 0, .6);
+    }
+
 }
