--- a/app/components/About.css
+++ b/app/components/About.css
@@ -49,7 +49,7 @@
         margin-right: 0px;
         margin-left: 0px;
         margin: 0;
-        
+        padding-bottom: 10px;        
         border-radius: 4px;
     }
 
