--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -128,7 +128,7 @@
   margin-top: 100px;
   transform: translateY(40%);
   cursor: pointer;
-  letter-spacing: -3px;
+  letter-spacing: -1.5px;
   position: relative;
   width: 100%;
 }
@@ -142,6 +142,10 @@
 
 .menu-items:hover > .menu-item:hover {
   color: rgb(255, 255, 255);
+}
+
+@media (min-width: 1088px) and (max-width: 1500px) {
+
 }
 
   @media (max-width: 767.98px) {
@@ -171,11 +175,7 @@
       }
 
       .menu-items > .menu-item {
-        margin-left: 10px;
+        margin-left: 0px;
+        margin-bottom: 50px;
       }
-
-      .menu-items > div {
-        letter-spacing: -2.4px;
-      }
-      
 }
