--- a/app/components/FirstContainer.css
+++ b/app/components/FirstContainer.css
@@ -115,3 +115,118 @@
         animation-delay: 0.2s;
     }
 }
+
+/* 150% */
+@media (min-width: 1242px) and (max-width: 1364px) {
+
+  .first-heading {
+    font-size: 6rem;
+    font-weight: 700;
+    text-align: start;
+    opacity: 0;
+    animation: 0.8s hey ease-out forwards;
+    animation-delay: 0.2s;
+    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='58' viewport='0 0 100 100' style='fill:black;font-size:34px;'><text y='50%'>👋</text></svg>") 16 0,auto;
+  }
+
+  .first-paragraph{
+    font-weight: 500;
+    font-size: 1.6rem;
+    text-align: end;
+    width: 40%;
+    margin-left: 140px;
+    opacity: 0;
+    animation: 0.4s para-animate ease-in forwards;
+    animation-delay: 0.8s;
+}
+
+.arrow-button{
+    font-size: 2rem;
+    color: black;
+    border: none;
+    opacity: 0;
+    background-color: transparent;
+    animation: 0.4s arrow-waiter ease-in forwards 0.9s;
+  }
+
+}
+
+
+/* 175% */
+@media (min-width: 800px) and (max-width: 1242px) {
+
+  .first-heading {
+    font-size: 5rem;
+    font-weight: 700;
+    text-align: start;
+    opacity: 0;
+    animation: 0.8s hey ease-out forwards;
+    animation-delay: 0.2s;
+    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='58' viewport='0 0 100 100' style='fill:black;font-size:34px;'><text y='50%'>👋</text></svg>") 16 0,auto;
+  }
+
+  .first-paragraph{
+    font-weight: 500;
+    font-size: 1.4rem;
+    text-align: end;
+    width: 40%;
+    margin-left: 140px;
+    opacity: 0;
+    animation: 0.4s para-animate ease-in forwards;
+    animation-delay: 0.8s;
+}
+
+.arrow-button{
+    font-size: 2rem;
+    color: black;
+    border: none;
+    opacity: 0;
+    background-color: transparent;
+    animation: 0.4s arrow-waiter ease-in forwards 0.9s;
+  }
+  
+  .arrow-button:hover {
+    cursor: pointer;
+  }
+
+}
+
+
+/* 200% */
+@media (min-width: 500px) and (max-width: 788px) {
+
+  .first-heading {
+    font-size: 5rem;
+    font-weight: 700;
+    text-align: start;
+    opacity: 0;
+    animation: 0.8s hey ease-out forwards;
+    animation-delay: 0.2s;
+    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='58' viewport='0 0 100 100' style='fill:black;font-size:34px;'><text y='50%'>👋</text></svg>") 16 0,auto;
+  }
+
+  .first-paragraph{
+    font-weight: 500;
+    font-size: 1.4rem;
+    text-align: end;
+    width: 40%;
+    margin-left: 140px;
+    opacity: 0;
+    animation: 0.4s para-animate ease-in forwards;
+    animation-delay: 0.8s;
+}
+
+.arrow-button{
+    font-size: 2rem;
+    color: black;
+    border: none;
+    opacity: 0;
+    background-color: transparent;
+    animation: 0.4s arrow-waiter ease-in forwards 0.9s;
+  }
+  
+  .arrow-button:hover {
+    cursor: pointer;
+  }
+
+}
