--- a/app/components/ThirdContainer.css
+++ b/app/components/ThirdContainer.css
@@ -17,11 +17,9 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
-    padding-left: 200px;
+    padding-left: 180px;
     cursor: pointer;
 }
-
-
 
 .square {
     display: flex;
@@ -30,7 +28,7 @@
     border-radius: 20px;
     padding-bottom: 0px;
     padding-top: 0px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, .4);
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, .2);
     flex-direction: column;
 }
 
@@ -40,6 +38,7 @@
     font-size: 1.8rem;
     transition: transform 0.3s;
     transform: translateY(650%);
+    width: 100vmin;
 }
 
 .numberid{
@@ -177,9 +176,102 @@
         width: 68vmin;
         padding: 20px;
         border-radius: 10px;
-        box-shadow: 0px 2px 6px rgba(0, 0, 0, .4);
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, .2);
         flex-direction: column;
     }
 
   }
+
+
+  /* 150% */
+@media (min-width: 1242px) and (max-width: 1364px) {
+
+    .thirdheading{
+        font-size: 2rem;
+    }
+
+    .square {
+        display: flex;
+        width: 44vmin;
+        padding: 20px;
+        border-radius: 20px;
+        padding-bottom: 0px;
+        padding-top: 0px;
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, .2);
+        flex-direction: column;
+    }
+    
+    
+    .reason {
+        text-align: start;
+        font-size: 1.4rem;
+        transition: transform 0.3s;
+        transform: translateY(580%);
+        width: 100vmin;
+    }
+    
+    .numberid{
+        font-size: 1.2rem;
+    }
+    
+    .details {
+        opacity: 0;
+        visibility: hidden;
+        font-size: 1rem;
+        align-self: center;
+        transition: opacity 0.4s 0.1s;
+        text-align: start;
+    }
+    
+    .square:hover .reason {
+        transform: translateY(100%);
+      }
+    
+    .square:hover .details {
+        opacity: 1;
+        visibility: visible;
+      }
+
+
+}
+
+
+/* 175% */
+@media (min-width: 800px) and (max-width: 1242px) {
+
+    .thirdheading{
+        font-size: 2rem;
+    }
+
+    .square {
+        display: flex;
+        width: 44vmin;
+        padding: 20px;
+        border-radius: 20px;
+        padding-bottom: 0px;
+        padding-top: 0px;
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, .2);
+        flex-direction: column;
+    }
+    
+    
+    .reason {
+        text-align: start;
+        font-size: 1.4rem;
+        transition: transform 0.3s;
+        transform: translateY(580%);
+        width: 100vmin;
+    }
+
+    .details {
+        opacity: 0;
+        visibility: hidden;
+        font-size: 1rem;
+        align-self: center;
+        transition: opacity 0.4s 0.1s;
+        text-align: start;
+    }
+
+
+}
   
