--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -144,10 +144,6 @@
   color: rgb(255, 255, 255);
 }
 
-@media (min-width: 1088px) and (max-width: 1500px) {
-
-}
-
   @media (max-width: 767.98px) {
 
     .HeaderLogoText {
@@ -181,7 +177,7 @@
 }
 
 /* 175% */
-@media (min-width: 800px) and (max-width: 1242px) {
+@media (min-width: 961px) and (max-width: 1242px) {
 
   .main-header {
     display: flex;
@@ -197,7 +193,7 @@
     letter-spacing: -4px;
     position: relative;
     cursor: pointer;
-    right: 300px;
+    right: 200px;
     font-weight: 800;
   }
   
@@ -328,6 +324,47 @@
   .menu-items:hover > .menu-item:hover {
     color: rgb(255, 255, 255);
   }
+}
 
+
+/* 200% to 250% */
+@media (min-width: 600px) and (max-width: 960px) {
+
+  .HeaderLogoText {
+    font-size: 44px;
+    letter-spacing: -4px;
+    position: relative;
+    cursor: pointer;
+    right: 200px;
+    font-weight: 800;
+  }
+
+
+  .menu-icon {
+    width: 34px;
+    height: 20px;
+    position: relative;
+    cursor: pointer;
+    left: 180px;
+    z-index: 1000;
+    }
+
+    .menu-items {
+      text-align: center;
+      color: white;
+      font-size: 1.3rem;
+      font-weight: 700;
+      display: block;
+    }
+
+    .menu-items > .menu-item {
+      margin: 10px;
+      margin-top: 70px;
+      transform: translateY(40%);
+      cursor: pointer;
+      letter-spacing: 0px;
+      position: relative;
+      width: 100%;
+    }
 
 }
