--- a/app/components/Portfolio.css
+++ b/app/components/Portfolio.css
@@ -146,7 +146,7 @@
 }
 
 /* 175% */
-@media (min-width: 800px) and (max-width: 1242px) {
+@media (min-width: 961px) and (max-width: 1242px) {
 
     .PortfolioHeading{
         font-size: 4rem;
@@ -191,3 +191,51 @@
     }
 
 }
+
+
+/* 200% to 250% */
+@media (min-width: 600px) and (max-width: 960px) {
+
+    .PortfolioHeading{
+        font-size: 3rem;
+        letter-spacing: -2px;
+        align-self: center;
+        padding-left: 80px;
+    }
+    
+    .projectimg {
+        height: 40vh;
+        margin-bottom: 120px;
+        width: 74vmin;
+        border-radius: 12px;
+        box-shadow: 0px 2px 8px rgba(0, 0, 0, .2);
+    }
+    
+    .projectname {
+        font-size: 1rem;
+    }
+    
+    .projects {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        padding-left: 200px;
+    }
+    
+    .projecttext {
+        margin-top: 10px;
+    }
+    
+    .techused {
+        padding-top: 20px;
+        font-size: .6rem;
+        color:darkblue;
+        width: 50vmin;
+    }
+    
+    .projectdetails {
+        width: 56vmin;
+        font-size: .8rem;
+    }
+
+} 
