--- a/app/components/About.css
+++ b/app/components/About.css
@@ -77,13 +77,62 @@
 
 }
 
-@media (min-width: 800px) and (max-width: 1242px) {
+/* 175% */
+@media (min-width: 961px) and (max-width: 1242px) {
 
     .storydetails {
         font-size: 1.3rem;
         text-align: start;
         width: 100vmin;
     }
+
+}
+
+/* 200% to 250% */
+@media (min-width: 600px) and (max-width: 960px) {
+
+    .About {
+        background-color: rgba(0,0,0,255);
+        height: auto;
+        margin-right: 50px;
+        margin-left: 340px;
+        border-radius: 14px;
+        color: #e7e7e9;
+        letter-spacing: -1px;
+        display: flex;
+        margin-top: 10px;
+        flex-direction: column;
+        align-items: center;
+    }
     
+    .Aboutheading {
+        font-size: 3rem;
+    }
+    
+    .story {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .storyheading {
+        text-align: start;
+        font-size: 2rem;
+    }
+    
+    .story .storytext:nth-of-type(2) .storydetails,.story .storytext:nth-of-type(2)  .storyheading {
+        text-align: end;
+      }
+    
+    
+    .storytext {
+        padding: 20px;
+        padding-left: 60px;
+    }
+
+    .storydetails {
+        font-size: 1rem;
+        text-align: start;
+        width: 80vmin;
+    }
 
 }
