--- a/app/components/About.css
+++ b/app/components/About.css
@@ -80,6 +80,15 @@
 /* 175% */
 @media (min-width: 961px) and (max-width: 1242px) {
 
+    .storyheading {
+        text-align: start;
+        font-size: 2rem;
+    }
+
+    .Aboutheading {
+        font-size: 3rem;
+    }
+
     .storydetails {
         font-size: 1.3rem;
         text-align: start;
@@ -88,8 +97,8 @@
 
 }
 
-/* 200% to 250% */
-@media (min-width: 600px) and (max-width: 960px) {
+/* 200% */
+@media (min-width: 769px) and (max-width: 960px) {
 
     .About {
         background-color: rgba(0,0,0,255);
@@ -131,6 +140,41 @@
 
     .storydetails {
         font-size: 1rem;
+        text-align: start;
+        width: 80vmin;
+    }
+
+}
+
+/* 250% */
+@media (min-width: 650px) and (max-width: 769px) {
+
+    .About {
+        background-color: rgba(0,0,0,255);
+        height: auto;
+        margin-right: 40px;
+        margin-left: 340px;
+        width: 100vmin;
+        border-radius: 14px;
+        color: #e7e7e9;
+        letter-spacing: -1px;
+        display: flex;
+        margin-top: 10px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .Aboutheading {
+        font-size: 2rem;
+    }
+    
+    .storyheading {
+        text-align: start;
+        font-size: 1.4rem;
+    }
+
+    .storydetails {
+        font-size: .8rem;
         text-align: start;
         width: 80vmin;
     }
