--- a/app/components/ThirdContainer.css
+++ b/app/components/ThirdContainer.css
@@ -285,6 +285,11 @@
         font-size: 1rem;
     }
 
+    .numberid{
+        font-size: 1rem;
+    }
+
+
     .square {
         display: flex;
         width: 40vmin;
@@ -317,10 +322,15 @@
 } 
   
 
-@media (min-width: 600px) and (max-width: 769px) {
+/* 250% */
+@media (min-width: 650px) and (max-width: 769px) {
 
     .thirdheading{
         font-size: 1rem;
+    }
+
+    .numberid{
+        font-size: .8rem;
     }
 
     .square {
@@ -351,5 +361,12 @@
         transition: opacity 0.4s 0.1s;
         text-align: start;
     }
+
+}
+
+/* 300% */
+@media (min-width: 450px) and (max-width:650px) {
+
+
 
 }
