--- a/app/components/FirstContainer.css
+++ b/app/components/FirstContainer.css
@@ -116,8 +116,9 @@
     }
 }
 
-/* 150% */
-@media (min-width: 1242px) and (max-width: 1364px) {
+
+  /* 125% */
+@media (min-width: 1482px) and (max-width: 1669px) {
 
   .first-heading {
     font-size: 6rem;
@@ -132,6 +133,41 @@
   .first-paragraph{
     font-weight: 500;
     font-size: 1.6rem;
+    text-align: end;
+    width: 40%;
+    margin-left: 140px;
+    opacity: 0;
+    animation: 0.4s para-animate ease-in forwards;
+    animation-delay: 0.8s;
+}
+
+  .arrow-button{
+    font-size: 2.4rem;
+    color: black;
+    border: none;
+    opacity: 0;
+    background-color: transparent;
+    animation: 0.4s arrow-waiter ease-in forwards 0.9s;
+  }
+  
+  }
+
+/* 150% */
+@media (min-width: 1242px) and (max-width: 1364px) {
+
+  .first-heading {
+    font-size: 5rem;
+    font-weight: 700;
+    text-align: start;
+    opacity: 0;
+    animation: 0.8s hey ease-out forwards;
+    animation-delay: 0.2s;
+    cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='58' viewport='0 0 100 100' style='fill:black;font-size:34px;'><text y='50%'>👋</text></svg>") 16 0,auto;
+  }
+
+  .first-paragraph{
+    font-weight: 500;
+    font-size: 1.2rem;
     text-align: end;
     width: 40%;
     margin-left: 140px;
@@ -156,7 +192,7 @@
 @media (min-width: 800px) and (max-width: 1242px) {
 
   .first-heading {
-    font-size: 5rem;
+    font-size: 4.3rem;
     font-weight: 700;
     text-align: start;
     opacity: 0;
@@ -167,7 +203,7 @@
 
   .first-paragraph{
     font-weight: 500;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     text-align: end;
     width: 40%;
     margin-left: 140px;
@@ -196,7 +232,7 @@
 @media (min-width: 769px) and (max-width: 960px) {
 
   .first-heading {
-    font-size: 4rem;
+    font-size: 3.8rem;
     font-weight: 700;
     text-align: start;
     opacity: 0;
@@ -207,7 +243,7 @@
 
   .first-paragraph{
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 1.1rem;
     text-align: end;
     width: 40%;
     margin-left: 140px;
@@ -217,7 +253,7 @@
 }
 
 .arrow-button{
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     color: black;
     border: none;
     opacity: 0;
@@ -249,6 +285,7 @@
     font-size: 1rem;
     text-align: end;
     width: 40%;
+    letter-spacing: -1px;
     margin-left: 140px;
     opacity: 0;
     animation: 0.4s para-animate ease-in forwards;
@@ -256,7 +293,7 @@
 }
 
 .arrow-button{
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     color: black;
     border: none;
     opacity: 0;
