--- a/app/components/ThirdContainer.css
+++ b/app/components/ThirdContainer.css
@@ -32,7 +32,6 @@
     flex-direction: column;
 }
 
-
 .reason {
     text-align: start;
     font-size: 1.8rem;
@@ -151,7 +150,7 @@
 
     .thirdcontainer {
         padding-bottom: 10px;
-        margin-top: -80px;
+        margin-top: -180px;
     }
 
     .square:hover .reason {
@@ -207,7 +206,7 @@
         text-align: start;
         font-size: 1.4rem;
         transition: transform 0.3s;
-        transform: translateY(500%);
+        transform: translateY(610%);
         width: 45vmin;
     }
     
@@ -218,7 +217,7 @@
     .details {
         opacity: 0;
         visibility: hidden;
-        font-size: 1rem;
+        font-size: 1.2rem;
         align-self: center;
         transition: opacity 0.4s 0.1s;
         text-align: start;
@@ -333,7 +332,7 @@
 @media (min-width: 769px) and (max-width: 960px) {
 
     .thirdheading{
-        font-size: 1rem;
+        font-size: 2rem;
     }
 
     .numberid{
@@ -343,28 +342,28 @@
 
     .square {
         display: flex;
-        width: 40vmin;
-        padding: 20px;
-        border-radius: 20px;
+        width: 46vmin;
+        padding: 10px;
+        border-radius: 16px;
         padding-bottom: 0px;
         padding-top: 0px;
-        box-shadow: 0px 2px 6px rgba(0, 0, 0, .2);
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, .2);
         flex-direction: column;
     }
     
     
     .reason {
         text-align: start;
-        font-size: 1.2rem;
+        font-size: 1rem;
         transition: transform 0.3s;
-        transform: translateY(580%);
+        transform: translateY(650%);
         width: 40vmin;
     }
 
     .details {
         opacity: 0;
         visibility: hidden;
-        font-size: .8rem;
+        font-size: .78rem;
         align-self: center;
         transition: opacity 0.4s 0.1s;
         text-align: start;
@@ -386,21 +385,22 @@
 
     .square {
         display: flex;
-        width: 34vmin;
-        padding: 20px;
-        border-radius: 20px;
+        width: 42vmin;
+        padding: 10px;
+        border-radius: 10px;
         padding-bottom: 0px;
+        margin: -4px;
         padding-top: 0px;
-        box-shadow: 0px 2px 6px rgba(0, 0, 0, .2);
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, .2);
         flex-direction: column;
     }
     
     
     .reason {
         text-align: start;
-        font-size: .8rem;
+        font-size: .75rem;
         transition: transform 0.3s;
-        transform: translateY(580%);
+        transform: translateY(640%);
         width: 38vmin;
     }
 
